--- a/homepage.html
+++ b/homepage.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="./assets/css/estilo.css">
     <title>HomePage-HS</title>
@@ -37,34 +33,31 @@
         }
     </style>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#servicio">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ubicacion">Ubicacion</a>
+                        <a class="nav-link" href="#ubicacion">Ubicación</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="reserva_cliente.html">Reserva</a>
+                        <a class="nav-link" href="reserva_cliente.html">Reserva</a>
                     </li>
-                    <li class="nav-item">
-                        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
                     <!-- Agregamos un elemento para mostrar el mensaje de bienvenida -->
                     <li class="nav-item mensaje-bienvenida">
                         <span class="nav-link">Bienvenido <span id="usernameLabel"></span></span>
@@ -109,9 +102,7 @@
     </div>
 
     <div class="container-fluid" style="padding: 50px">
-        <p class="ppagina">Nos especializamos en cortes de cabello, barba y afeitado para
-            hombres. Nuestro equipo de barberos se preocupa de entregar
-            siempre un servicio de primer nivel a nuestros clientes.</p>
+        <p class="ppagina">Nos especializamos en cortes de cabello, barba y afeitado para hombres. Nuestro equipo de barberos se preocupa de entregar siempre un servicio de primer nivel a nuestros clientes.</p>
         <p class="ppagina" style="padding: 10px;">GARANTIZAMOS EXCELENCIA Y SATISFACCIÓN</p>
     </div>
 
@@ -124,8 +115,7 @@
                     <img src="./assets/img/cortecabello.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Corte de Cabello</h5>
-                        <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada
-                            a elección</p>
+                        <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada a elección</p>
                         <p class="card-text">$15.000</p>
                     </div>
                 </div>
@@ -135,9 +125,7 @@
                     <img src="./assets/img/perfilado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Perfilado de Barba</h5>
-                        <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes.Incluye aplicación de
-                            productos premium.
-                        </p>
+                        <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes. Incluye aplicación de productos premium.</p>
                         <p class="card-text">$13.000</p>
                     </div>
                 </div>
@@ -147,8 +135,7 @@
                     <img src="./assets/img/afeitado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Afeitado al Ras</h5>
-                        <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja
-                            y after shave.</p>
+                        <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja y after shave.</p>
                         <p class="card-text">$13.000</p>
                     </div>
                 </div>
@@ -158,8 +145,7 @@
                     <img src="./assets/img/facial.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Tratamiento Facial</h5>
-                        <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción
-                            protectora e hidratante.</p>
+                        <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción protectora e hidratante.</p>
                         <p class="card-text">$14.000</p>
                     </div>
                 </div>
@@ -170,39 +156,27 @@
     <div class="container-fluid text-center align-items-center">
         <div class="row">
             <div class="col-sm-1"></div>
-            <div class="col-sm-3"><img src="./assets/img/servicios1.png" style="max-width: 100%;">
-            </div>
-            <div class="col-sm-4"><img src="./assets/img/servicios2.png" style="max-width: 100%;">
-            </div>
-            <div class="col-sm-3"><img src="./assets/img/servicios3.png" style="max-width: 100%;">
-            </div>
+            <div class="col-sm-3"><img src="./assets/img/servicios1.png" style="max-width: 100%;"></div>
+            <div class="col-sm-4"><img src="./assets/img/servicios2.png" style="max-width: 100%;"></div>
+            <div class="col-sm-3"><img src="./assets/img/servicios3.png" style="max-width: 100%;"></div>
             <div class="col-sm-1"></div>
         </div>
         <div class="row">
             <div class="col-sm-1"></div>
-            <div class="col-sm-5"><img src="./assets/img/servicios4.png" style="max-width: 100%;">
-            </div>
-            <div class="col-sm-5"><img src="./assets/img/servicios5.png" style="max-width: 100%;">
-            </div>
+            <div class="col-sm-5"><img src="./assets/img/servicios4.png" style="max-width: 100%;"></div>
+            <div class="col-sm-5"><img src="./assets/img/servicios5.png" style="max-width: 100%;"></div>
             <div class="col-sm-1"></div>
         </div>
     </div>
 
     <div class="container-fluid text-center" style="border-color: black; border-radius: 50%; padding: 40px">
         <a name="ubicacion"></a><br><br><br>
-        <div class="container-fluid psub">
-            UBICACIÓN
-        </div><br><br><br>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
+        <div class="container-fluid psub">UBICACIÓN</div><br><br><br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
     </div><br><br><br>
     <div class="container-fluid text-center">
         <a name="contacto"></a>
-        <div class="container-fluid psub">
-            CONTACTO
-        </div><br><br><br>
+        <div class="container-fluid psub">CONTACTO</div><br><br><br>
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-1">
@@ -223,5 +197,4 @@
 
     <script src="./assets/js/home.js"></script>
 </body>
-
 </html>
